--- a/config.ini
+++ b/config.ini
@@ -1,3 +1,7 @@
 [TELEGRAM] 
 ACCESS_TOKEN = 5851381047:AAEMNUka4JJcLLxTtvqGIvavCFupkHaWZ5E
 
+[REDIS]
+HOST = redis-10944.c54.ap-northeast-1-2.ec2.cloud.redislabs.com
+PASSWORD = a23LNEh9MSydwb2t6RLjT0i2XDDOGTWu
+REDISPORT = 10944
